--- a/mytemplates/index.html
+++ b/mytemplates/index.html
@@ -45,11 +45,10 @@ https://templatemo.com/tm-535-softy-pinko
                     <nav class="main-nav">
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li><a href="#welcome" class="active">Home</a></li>
-                            <li><a href="#features">About</a></li>
-                            <li><a href="#work-process">Contests</a></li>
-                            <li><a href="#blog">Community</a></li>
-                            <li><a href="/personalpage/">User</a></li>
+                            <li><a href="" class="active">Home</a></li>
+                            <li><a href="/contest/index/">Contests</a></li>
+                            <li><a href="/forum">Community</a></li>
+                            <li><a href="/user/login">Login/Personal page</a></li>
                         </ul>
                         <a class='menu-trigger'>
                             <span>Menu</span>
@@ -72,7 +71,7 @@ https://templatemo.com/tm-535-softy-pinko
                     <div class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 col-md-12 col-sm-12">
                         <h1>Form <strong>groups</strong><br>and take part in contests with your <strong>teammates</strong></h1>
                         <p>Besides taking part in competitions, you can also make friends and share your experience with others in the community. Have fun!</p>
-                        <a href="#features" class="main-button-slider">Discover More</a>
+                        <!--<a href="#features" class="main-button-slider">Discover More</a>-->
                     </div>
                 </div>
             </div>
@@ -94,7 +93,7 @@ https://templatemo.com/tm-535-softy-pinko
                                     <i><img src="/static/images/featured-item-01.png" alt=""></i>
                                 </div>
                                 <h5 class="features-title">Up-to-date information</h5>
-                                <p>By collabrating with contst holders, we update news about popular contest on a daily basis.</p>
+                                <p>By collabrating with contest holders, we update news about popular contest on a daily basis.</p>
                             </div>
                         </div>
                         <!-- ***** Features Small Item End ***** -->
@@ -129,53 +128,6 @@ https://templatemo.com/tm-535-softy-pinko
     </section>
     <!-- ***** Features Small End ***** -->
 
-    <!-- ***** Features Big Item Start ***** -->
-    <section class="section padding-top-70 padding-bottom-0" id="features">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5 col-md-12 col-sm-12 align-self-center" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
-                    <img src="/static/images/left-image.png" class="rounded img-fluid d-block mx-auto" alt="App">
-                </div>
-                <div class="col-lg-1"></div>
-                <div class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix">
-                    <div class="left-heading">
-                        <h2 class="section-title">Let’s discuss about you project</h2>
-                    </div>
-                    <div class="left-text">
-                        <p>Nullam sit amet purus libero. Etiam ullamcorper nisl ut augue blandit, at finibus leo efficitur. Nam gravida purus non sapien auctor, ut aliquam magna ullamcorper.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="hr"></div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- ***** Features Big Item End ***** -->
-
-    <!-- ***** Features Big Item Start ***** -->
-    <section class="section padding-bottom-100">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-bottom-fix">
-                    <div class="left-heading">
-                        <h2 class="section-title">We can help you to grow your business</h2>
-                    </div>
-                    <div class="left-text">
-                        <p>Aenean pretium, ipsum et porttitor auctor, metus ipsum iaculis nisi, a bibendum lectus libero vitae urna. Sed id leo eu dolor luctus congue sed eget ipsum. Nunc nec luctus libero. Etiam quis dolor elit.</p>
-                    </div>
-                </div>
-                <div class="col-lg-1"></div>
-                <div class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big" data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
-                    <img src="/static/images/right-image.png" class="rounded img-fluid d-block mx-auto" alt="App">
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- ***** Features Big Item End ***** -->
-
     <!-- ***** Home Parallax Start ***** -->
     <section class="mini" id="work-process">
         <div class="mini-content">
@@ -201,14 +153,14 @@ https://templatemo.com/tm-535-softy-pinko
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                         <a href="#" class="mini-box">
                             <i><img src="/static/images/work-process-item-01.png" alt=""></i>
-                            <strong>Programming</strong>
+                            <strong>Investment</strong>
                             <span> </span>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                         <a href="#" class="mini-box">
                             <i><img src="/static/images/work-process-item-01.png" alt=""></i>
-                            <strong>Knowledge</strong>
+                            <strong>Technology</strong>
                             <span> </span>
                         </a>
                     </div>
@@ -216,21 +168,21 @@ https://templatemo.com/tm-535-softy-pinko
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                         <a href="#" class="mini-box">
                             <i><img src="/static/images/work-process-item-01.png" alt=""></i>
-                            <strong>XXX</strong>
+                            <strong>Hackson</strong>
                             <span> </span>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                         <a href="#" class="mini-box">
                             <i><img src="/static/images/work-process-item-01.png" alt=""></i>
-                            <strong>XXX</strong>
+                            <strong>Mathematics</strong>
                             <span> </span>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                         <a href="#" class="mini-box">
                             <i><img src="/static/images/work-process-item-01.png" alt=""></i>
-                            <strong>XXX</strong>
+                            <strong>Sports</strong>
                             <span> </span>
                         </a>
                     </div>
@@ -273,7 +225,7 @@ https://templatemo.com/tm-535-softy-pinko
                             <div class="text">
                                If you are good at some fields, don't hesitate to help those who are in need, from which you can earn achievement points.
                             </div>
-                            <a href="#" class="main-button">Read More</a>
+
                         </div>
                     </div>
                 </div>
@@ -289,7 +241,7 @@ https://templatemo.com/tm-535-softy-pinko
                             <div class="text">
                                 People taking part in past competitions may post relevant documents here, which will help others prepare for future contests.
                             </div>
-                            <a href="#" class="main-button">Read More</a>
+
                         </div>
                     </div>
                 </div>
@@ -303,9 +255,9 @@ https://templatemo.com/tm-535-softy-pinko
                                 <a href="#">Exchanging ideas</a>
                             </h3>
                             <div class="text">
-                                If one has some doubts or insights, he/she can post them on the commnuity, and people may leave comments below.
+                                If one has some doubts or insights, he/she can post them on the community, and people may leave comments below.
                             </div>
-                            <a href="#" class="main-button">Read More</a>
+
                         </div>
                     </div>
                 </div>
@@ -354,3 +306,4 @@ https://templatemo.com/tm-535-softy-pinko
 
   </body>
 </html>
+
