--- a/mytemplates/team.html
+++ b/mytemplates/team.html
@@ -41,13 +41,13 @@
                     </div>
                     <ul class="nav header-topbar__nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Back to Main</a>
+                            <a class="nav-link" href="">Back to Main</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="ContestSearch.html">Go to Contest</a>
+                            <a class="nav-link" href="/contest/index/">Go to Contest</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Forum.html">Go to Forum</a>
+                            <a class="nav-link" href="/forum">Go to Forum</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">My Team</a>
