--- a/mytemplates/team.html
+++ b/mytemplates/team.html
@@ -53,7 +53,7 @@
                             <a class="nav-link" href="#">My Team</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../Login/login.html">Sign In/Personal Page</a>
+                            <a class="nav-link" href="/user/login">Sign In/Personal Page</a>
                         </li>
                     </ul>
                 </div>
