--- a/mytemplates/PostPage.html
+++ b/mytemplates/PostPage.html
@@ -134,7 +134,7 @@
                                         <p>Contribute your comment below!</p>
                                         <form method="POST">
                                         <textarea class="form-control" id="content" name="content" rows="3"></textarea>
-                                        <button type="submit" action="{% url 'forum:comment_create' %} class="btn btn-primary btn-rounded btn-lg master-post-application__submit-btn">Comment!</button>
+                                        <button type="submit" class="btn btn-primary btn-rounded btn-lg master-post-application__submit-btn">Comment!</button>
                                         </form>
                                     </div>
                                 </div>
