--- a/mytemplates/index.html
+++ b/mytemplates/index.html
@@ -144,21 +144,21 @@ https://templatemo.com/tm-535-softy-pinko
                 <!-- ***** Mini Box Start ***** -->
                 <div class="row">
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
-                        <a href="#" class="mini-box">
+                        <a href="/contest/search/?area=Business" class="mini-box">
                             <i><img src="/static/images/work-process-item-01.png" alt=""></i>
                             <strong>Business</strong>
                             <span> </span>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
-                        <a href="#" class="mini-box">
+                        <a href="/contest/search/?area=Investment" class="mini-box">
                             <i><img src="/static/images/work-process-item-01.png" alt=""></i>
                             <strong>Investment</strong>
                             <span> </span>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
-                        <a href="#" class="mini-box">
+                        <a href="/contest/search/?area=Technology" class="mini-box">
                             <i><img src="/static/images/work-process-item-01.png" alt=""></i>
                             <strong>Technology</strong>
                             <span> </span>
@@ -166,14 +166,14 @@ https://templatemo.com/tm-535-softy-pinko
                     </div>
 
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
-                        <a href="#" class="mini-box">
+                        <a href="/contest/search/?area=Hackson" class="mini-box">
                             <i><img src="/static/images/work-process-item-01.png" alt=""></i>
                             <strong>Hackson</strong>
                             <span> </span>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
-                        <a href="#" class="mini-box">
+                        <a href="/contest/search/?area=Mathematics" class="mini-box">
                             <i><img src="/static/images/work-process-item-01.png" alt=""></i>
                             <strong>Mathematics</strong>
                             <span> </span>
