--- a/mytemplates/teammates-leader.html
+++ b/mytemplates/teammates-leader.html
@@ -50,7 +50,7 @@
                             <a class="nav-link" href="/contest/index/">Go to Contest</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Forum.html">Go to Forum</a>
+                            <a class="nav-link" href="/forum/">Go to Forum</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">My Team</a>
