--- a/mytemplates/contestpage.html
+++ b/mytemplates/contestpage.html
@@ -42,7 +42,7 @@
                 </div>
                 <ul class="nav header-topbar__nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="/">Back to Main</a>
+                            <a class="nav-link" href="/index/">Back to Main</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/contest/index/">Go to Contest</a>
