--- a/mytemplates/forumindex.html
+++ b/mytemplates/forumindex.html
@@ -35,7 +35,7 @@
                     </div>
                     <ul class="nav header-topbar__nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="/">Back to Main</a>
+                            <a class="nav-link" href="/index/">Back to Main</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/contest/index/">Go to Contest</a>
@@ -62,7 +62,7 @@
             Select the appropriate post and reviews and comment directly, without hesitation.
         </p>
         <div class="hero-leave-request__btn-wrap" style="color:white;">
-            <a href="AddPost.html" class="btn btn-primary btn-rounded hero-leave-request__post-job-btn">Start a post</a>
+            <a href="/forum/post_create/" class="btn btn-primary btn-rounded hero-leave-request__post-job-btn">Start a post</a>
             <span class="hero-leave-request__offer-description" style="color:white;">Visitors will come in 20-30 minutes!</span>
         </div>
     </div>
