--- a/mytemplates/teammates-leader.html
+++ b/mytemplates/teammates-leader.html
@@ -44,7 +44,7 @@
                     </div>
                     <ul class="nav header-topbar__nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Back to Main</a>
+                            <a class="nav-link" href="/index/">Back to Main</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/contest/index/">Go to Contest</a>
@@ -56,7 +56,7 @@
                             <a class="nav-link" href="#">My Team</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../Login/login.html">Sign In/Personal Page</a>
+                            <a class="nav-link" href="/user/login/">Sign In/Personal Page</a>
                         </li>
                     </ul>
                 </div>
