--- a/mytemplates/index.html
+++ b/mytemplates/index.html
@@ -45,7 +45,7 @@ https://templatemo.com/tm-535-softy-pinko
                     <nav class="main-nav">
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li><a href="" class="active">Home</a></li>
+                            <li><a href="/index/" class="active">Home</a></li>
                             <li><a href="/contest/index/">Contests</a></li>
                             <li><a href="/forum">Community</a></li>
                             <li><a href="/user/login">Login/Personal page</a></li>
