--- a/mytemplates/login.html
+++ b/mytemplates/login.html
@@ -22,6 +22,7 @@
                             <input id="username" type="text" name="username" placeholder="my name is xxx">
                             <input id="password" type="password" name="password" placeholder="Password">
                             <a class="forgot" href="{% url 'user:findpassword' %}">Forgot password?</a>
+                            <a class="forgot" href="/user/regis/">Register Here!</a>
                             <!--input should be click on the button-->
                             <input type="submit" name="" value="Login">
                             <div class="col-md-12">
