--- a/mytemplates/index.html
+++ b/mytemplates/index.html
@@ -48,6 +48,7 @@ https://templatemo.com/tm-535-softy-pinko
                             <li><a href="/index/" class="active">Home</a></li>
                             <li><a href="/contest/index/">Contests</a></li>
                             <li><a href="/forum">Community</a></li>
+                            <li><a href="/user/myteam/">My team</a></li>
                             <li><a href="/user/login">Login/Personal page</a></li>
                         </ul>
                         <a class='menu-trigger'>
