--- a/mytemplates/teammates.html
+++ b/mytemplates/teammates.html
@@ -53,7 +53,7 @@
                             <a class="nav-link" href="/forum/">Go to Forum</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">My Team</a>
+                            <a class="nav-link" href="/user/myteam/">My Team</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/user/login">Sign In/Personal Page</a>
